monitoring/08.traefik_ingressRoute.yaml
#
# Middleware for redirecting 
#
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
#
# HTTP Ingress routes
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-http-ingress-routes
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    # Jellyfin
    - match: Host(`grafana.home.net`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: grafana
          port: 80
          namespace: monitoring
    - match: Host(`loki.home.net`)
      kind: Rule
      services:
        - name: loki-gateway 
          port: 80
          namespace: monitoring
    - match: Host(`prometheus.home.net`)
      kind: Rule
      services:
        - name: prometheus-server
          port: 80
          namespace: monitoring
---
---
#
# Ingress routes
#
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-https-ingress-routes
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-tls
  routes:
    # Jellyfin
    - match: Host(`grafana.home.net`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          namespace: monitoring
